Remove horizontal scrollbar from table Fixes #97

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -228,7 +228,6 @@ table {
   border-width: 3px;
   overflow-x: scroll;
   width: 100%;
-  display: inline-block;
   @apply font-mono;
 }
 
